Fixed sample image spacing in mobile.

--- a/css/samples.css
+++ b/css/samples.css
@@ -7,7 +7,8 @@
 .g-sample {
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
+    column-gap: 50px;
+    row-gap: 20px;
 
     /* padding: 20px;
     background-color: #1c1d20;
